2.5.0
----------
Replaced missing broken to full plate recipes
Added osmium alloy that can be used as steel replacement
Added alt recipe for silent gem manual
Added some other uses for treated wood/creosote


2.4.0
----------
Add bucket quest before drying basin
Adjust loottable scripts to work with new evilcraft (aka less blood in chests)
Fixed some weird formatting error in quest book
Fixed yeast output from rf crushers for moldy bread to match rustic
Made the stupidly expensive fermenter not stupidly expensive
Removed chisel limestone from oregen
Added recipe to convert between chisel and magneticraft limestone
Fixed broken starlight quest
Added SG iron rod to IE iron rod oredict
Update Pams config 
Changed pams market currency (might reduce crashes from people trying to farm emeralds)
Added alt recipe for node mover
Remove apatite gems from world gen, banned apatite use in silents tools
Raised max bonus hearts for SoL:Carrot to 10 at 240 different foods
Changed silent's gems to regional world gen (only 1 or 2 differnt gems generate in a 8x8 chunk area)
Hide unused ingots/ores in JEI
Removed magic gate in exu resonator
Added new fany loot and a bomb to rare rail dungeons
Fixed black iron ingots not converting to nuggets/blocks and back again
Made rustic bees not quite as fast to multiply
Added bundle of sticks block which burn for a bit longer than the individual sticks
BQM should (hopefully) auto update on world load
Broken calc circuits can now be crushed for redstone
Fixed bibliocraft lang file errors (Thanks MainFreak)
Made bog earth lakes less derpy (Thanks Alge)

Forge Updated to 14.23.1.2604
New Mod:
* Akashic Tome
Mod Updates:
* /dank/null
* Actually Additions
* Advanced Generators
* AE2
* Astral Sorcery
* B.A.S.E
* Baubles
* Bdlib
* Binnie's Mod
* Bookshelf
* Botania
* CoFH Core
* CoFH World
* ConnectedTexturesMod
* ContentTweaker
* Controlling
* Crafttweaker
* Cucumber
* Cyclops Core
* Default Options
* EvilCraft
* ExtendedCrafting
* Extra Utils 2