@@ -3363,6 +3363,7 @@ contenttweaker {
     B:holyplank=true
     B:irradiatediridium=true
     B:obsidiancase=true
+    B:osmaticsteelore=true
     B:platslurry=true
     B:rottenpotblock=false
     B:scrapelec=true
