@@ -3,7 +3,7 @@
 cache {
     # Waits as many hours, until it checks again. [range: 0 ~ 168, default: 24]
     I:interval=24
-    S:lastCheck=1518488267392
+    S:lastCheck=1518734019035
 }
 
 
