@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Tue Feb 13 20:45:54 EST 2018
+#Thu Feb 15 19:59:37 EST 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
