@@ -49,10 +49,43 @@
 				"material": "minecraft:netherrack",
 				"cluster-size": 20
 			},
-			"cluster-count": 2,
-			"chunk-chance": 12,
+			"cluster-count": 4,
+			"chunk-chance": 6,
 			"min-height": 10,
 			"max-height": 40,
+			"retrogen": "true",
+			"biome": {
+				"restriction": "whitelist",
+				"value": [
+					{
+						"type": "dictionary",
+						"entry": "NETHER"
+					}
+				]
+			},
+			"dimension": "all"
+		},
+		"glowstone_clathrate_roof": {
+			"distribution": "uniform",
+			"generator": {
+				"block": [
+					{
+						"name": "thermalfoundation:ore_fluid",
+						"metadata": 3,
+						"weight": 90
+					},
+					{
+						"name": "thermalfoundation:fluid_glowstone",
+						"weight": 10
+					}
+				],
+				"material": "minecraft:netherrack",
+				"cluster-size": 20
+			},
+			"cluster-count": 4,
+			"chunk-chance": 8,
+			"min-height": 100,
+			"max-height": 128,
 			"retrogen": "true",
 			"biome": {
 				"restriction": "whitelist",
