@@ -1,31 +1,46 @@
 {
 	"populate": {
-        "deep_boulder": {
+		"deep_boulder": {
 
 			"distribution": "gaussian",
+
 			"generator": {
-                "type": "boulder",
-                "block": [
-					{
-						"name": "appliedenergistics2:sky_stone_block",
-						"weight": 80
-					},
-					{
-						"name": "contenttweaker:osmaticsteelore",
-						"metadata": 7,
-						"weight": 20
-					}
-                ],
-				"diameter": 1,
-                "size-variance": 0,
-				"count-variance": 1,
-                "count": 1
+			"type": "boulder",
+			"block": [
+				{
+					"name": "appliedenergistics2:sky_stone_block",
+					"weight": 80
+				},
+				{
+					"name": "contenttweaker:osmaticsteelore",
+					"metadata": 7,
+					"weight": 20
+				}
+			],
+			"diameter": 1,
+			"size-variance": 0,
+			"count-variance": 1,
+			"count": 1
 			},
-            "chunk-chance": 9,
+
+			"material": [
+				{
+					"name": "minecraft:stone"
+				},
+				{
+					"name": "rustic:slate"
+				},
+				{
+					"name": "chisel:basalt2",
+					"metadata": 7
+				}
+			],
+
+			"chunk-chance": 4,
 			"cluster-count": 1,
-			"center-height": 7,
+			"center-height": 6,
 			"spread": 3,
-			"retrogen": false,
+			"retrogen": true,
 			"biome": "all",
 			"dimension": {
 				"restriction": "blacklist",
