@@ -293,7 +293,7 @@ world1129693313 {
 world1167654689 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=chest
+    S:filterText=power cub
     B:overlayEnabled=true
 }
 
@@ -419,9 +419,14 @@ world183676172 {
 
 
 world1837557036 {
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
     S:filterText=coal
+
+    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
@@ -496,7 +501,7 @@ world2177 {
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=creo
+    S:filterText=@mek
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
