@@ -87,10 +87,10 @@ all {
         B:"Nether Slate"=false
 
         # number of times the generator will try to place a slate vein per chunk [range: 0 ~ 128, default: 5]
-        I:"Slate Veins Per Chunk"=5
+        I:"Slate Veins Per Chunk"=3
 
         # number of blocks per slate vein [range: 0 ~ 100, default: 33]
-        I:"Slate Vein Size"=33
+        I:"Slate Vein Size"=22
 
         # chance for olive trees to try to generate in a chunk [range: 0.0 ~ 1.0, default: 0.03]
         S:"Olive Tree Generation Chance"=0.03
