@@ -1,5 +1,5 @@
 #Splash screen properties
-#Tue Feb 13 20:43:30 EST 2018
+#Thu Feb 15 19:56:52 EST 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
@@ -9,8 +9,8 @@ memoryLow=0xE42F2F
 rotate=false
 memoryWarn=0xE6E84A
 showMemory=true
-enabled=true
 bar=0xCB3D35
+enabled=true
 resourcePackPath=resources
 logoOffset=0
 forgeTexture=fml\:textures/gui/forge.png
