@@ -9,6 +9,7 @@ tile.contenttweaker.dblood.name=Otherworldly Blood
 tile.contenttweaker.holylog.name=Holy Wood
 tile.contenttweaker.holyplank.name=Holy Wood Planks
 tile.contenttweaker.bundle_of_sticks.name=Bundle of Sticks
+tile.contenttweaker.osmaticsteelore.name=Osmatic Steel Ore
 item.contenttweaker.dblood.name=Otherworldly Blood
 item.contenttweaker.entitykiller.name=Entity Killer
 item.contenttweaker.advancedcase.name=Advanced Case
@@ -31,7 +32,8 @@ item.contenttweaker.goldclay.name=Golden Clay
 item.contenttweaker.bqmupdate.name=BQM Quest Updater
 item.contenttweaker.moldybread.name=Moldy Bread
 item.contenttweaker.lostcityportal.name=Lost City Portal
-item.contenttweaker.osmaticsteel.name=Osmatic-Steel Ingot
+item.contenttweaker.osmaticsteel.name=Osmatic Steel Ingot
+item.contenttweaker.osmaticsteeldust.name=Osmatic Steel Dust
 fluid.dblood=Otherworldly Blood
 fluid.dblood.name=Otherworldly Blood
 binniecore.storage.compartment=Compartment
