@@ -104,6 +104,8 @@ Crusher
 =========================*/
 //mods.mekanism.crusher.removeRecipe(<thermalfoundation:ore:7>);
 //mods.mekanism.crusher.removeRecipe(<draconicevolution:draconium_ore>);
+mods.mekanism.crusher.addRecipe(<contenttweaker:osmaticsteelore>, <contenttweaker:osmaticsteeldust> * 2);
+
 
 /*=========================
 Enrichment
